# Vortex-File-Manager

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/release/: app-release.apk  output-metadata.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni-classes.cpp  jni-classes.h  log.h
app/src/main/cpp/jni/: jni_class_names.h  jni_classes.cpp  jni_classes.h
app/src/main/cpp/unix/: attrs.cpp  classes.cpp  operations.cpp  unix-buffer.cpp  unix-calls.cpp  unix-file-channel.cpp
app/src/main/cpp/unix/buffer/: unix-buffer.cpp
app/src/main/cpp/unix/channel/: unix-file-channel.cpp
app/src/main/cpp/unix/observer/: unix-observer.cpp
app/src/main/cpp/unix/operations/: symlink.cpp
app/src/main/cpp/unix/status/: status.cpp  status.h
app/src/main/res/drawable/: ic_arrow_left_24.xml  ic_arrow_right_24.xml  ic_bookmark_add_24.xml  ic_bookmark_remove_24.xml  ic_check_circle_24.xml  ic_cut_24.xml  ic_description_24.xml  ic_deselect_all_24.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_light_mode_24.xml  ic_sort_ascending_24.xml  ic_storage_item_icon_backgroubd.xml  ic_video_24.xml
app/src/main/res/layout/: activity_main.xml  fragment_storage_list.xml
app/src/main/res/navigation/: main_navigation.xml
app/src/main/res/values/: ids.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
buildSrc/src/main/java/: AndroidConfigure.kt  BuildConfig.kt  Deps.kt  Versions.kt
buildSrc/src/main/kotlin/: BuildConfig.kt  Deps.kt  Plugins.kt  Versions.kt
filesystem/: build.gradle.kts
filesystem-unix/: build.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
navigation/: build.gradle.kts
package-manager/: build.gradle.kts
package-manager/src/main/java/error/: ErrorrNum.kt
package-manager/src/main/java/model/: Package.kt  (+2 more)
pluginsystem/: build.gradle.kts
pluginsystem-common/: build.gradle.kts
pluginsystem-ui/: build.gradle.kts
ui-component/: build.gradle.kts
ui-component/src/main/: AndroidManifest.xml
vortex-service/: build.gradle.kts
vortex-service/src/main/: AndroidManifest.xml
vortex-theme/: build.gradle.kts
(+849 files in other folders)
